objects/Revision__c.object
<CustomObject>
 <fullName>Revision__c</fullName>
 <description>Represents a single revision in our version control system.</description>
 <fields>
  <fullName>Author_Text__c</fullName>
  <label>Author Text</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Author__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Author</label>
  <referenceTo>User</referenceTo>
  <relationshipName>Revisions</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Backlog_Item__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Backlog Item</label>
  <referenceTo>Backlog__c</referenceTo>
  <relationshipName>BackLogIntegration</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Changes__c</fullName>
  <label>Changes</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>Client_Text__c</fullName>
  <label>Client Text</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Client__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Client</label>
  <referenceTo>User</referenceTo>
  <relationshipLabel>Revisions</relationshipLabel>
  <relationshipName>Revisions2</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Internal_Review__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Internal Review</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Legacy_Revision_SFDC_ID__c</fullName>
  <caseSensitive>true</caseSensitive>
  <description>Created for the data migration. Stores SFDC ID from the legacy org.</description>
  <externalId>true</externalId>
  <label>Legacy Revision SFDC ID</label>
  <length>18</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <fields>
  <fullName>Message__c</fullName>
  <label>Message</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>OND_Legacy_Owner__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>OND Legacy Owner</label>
  <referenceTo>User</referenceTo>
  <relationshipName>Revisions1</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Project_Name__c</fullName>
  <label>Project Name</label>
  <type>TextArea</type>
 </fields>
 <fields>
  <fullName>Reviewed__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Reviewed</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Source__c</fullName>
  <description>The source version control system of the revision</description>
  <label>Source</label>
  <type>Picklist</type>
  <valueSet>
   <restricted>true</restricted>
   <valueSetDefinition>
    <value>
     <fullName>ProjectLocker</fullName>
     <default>true</default>
     <label>ProjectLocker</label>
    </value>
    <value>
     <fullName>GitHub</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>Test_Data__c</fullName>
  <label>Test Data Field</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Tickets__c</fullName>
  <label>Tickets</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Trac_Id__c</fullName>
  <externalId>true</externalId>
  <label>Trac Id</label>
  <length>255</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <fields>
  <fullName>Trac_Link__c</fullName>
  <formula>IF(
            OR(
            ISBLANK(TEXT(Source__c)),
            ISPICKVAL(Source__c, "ProjectLocker")
            ),
            HYPERLINK("https://pl5.projectlocker.com/bluewolf/" + Project_Name__c  +"/trac/changeset/" + SUBSTITUTE(Name, 'r', '') , Name),
            HYPERLINK("https://github.com/bluewolf-beyond/" + Project_Name__c  +"/commit/" + Name, Name)
            )</formula>
  <label>Trac Link</label>
  <type>Text</type>
 </fields>
 <label>Revision</label>
 <listViews>
  <fullName>All</fullName>
  <columns>CREATED_DATE</columns>
  <columns>Reviewed__c</columns>
  <columns>Author_Text__c</columns>
  <columns>NAME</columns>
  <columns>Message__c</columns>
  <columns>Trac_Link__c</columns>
  <columns>LAST_UPDATE</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <listViews>
  <fullName>All1</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <listViews>
  <fullName>All_Unreviewed_This_Year</fullName>
  <booleanFilter>1 AND 2</booleanFilter>
  <columns>CREATED_DATE</columns>
  <columns>Project_Name__c</columns>
  <columns>Trac_Link__c</columns>
  <columns>Author_Text__c</columns>
  <columns>Message__c</columns>
  <columns>Reviewed__c</columns>
  <filterScope>Everything</filterScope>
  <filters>
   <field>Reviewed__c</field>
   <operation>equals</operation>
   <value>0</value>
  </filters>
  <filters>
   <field>CREATED_DATE</field>
   <operation>greaterOrEqual</operation>
   <value>1/1/2015 12:00 AM</value>
  </filters>
  <label>All Unreviewed This Year</label>
 </listViews>
 <listViews>
  <fullName>Recently_Updated_Revisions</fullName>
  <columns>NAME</columns>
  <columns>Author_Text__c</columns>
  <columns>Trac_Link__c</columns>
  <columns>Reviewed__c</columns>
  <columns>Message__c</columns>
  <columns>LAST_UPDATE</columns>
  <filterScope>Everything</filterScope>
  <filters>
   <field>LAST_UPDATE</field>
   <operation>equals</operation>
   <value>TODAY</value>
  </filters>
  <filters>
   <field>CREATED_DATE</field>
   <operation>notEqual</operation>
   <value>TODAY</value>
  </filters>
  <label>Recently Updated Revisions</label>
 </listViews>
 <listViews>
  <fullName>Team_Triceritops</fullName>
  <booleanFilter>1 AND 2</booleanFilter>
  <columns>CREATED_DATE</columns>
  <columns>Trac_Link__c</columns>
  <columns>Author_Text__c</columns>
  <columns>Message__c</columns>
  <columns>Reviewed__c</columns>
  <columns>Project_Name__c</columns>
  <filterScope>Everything</filterScope>
  <filters>
   <field>Reviewed__c</field>
   <operation>equals</operation>
   <value>0</value>
  </filters>
  <filters>
   <field>Author_Text__c</field>
   <operation>contains</operation>
   <value>mdoshi,winston,llorente,hurteau</value>
  </filters>
  <label>Team Triceritops</label>
  <sharedTo>
   <allInternalUsers/>
  </sharedTo>
 </listViews>
 <listViews>
  <fullName>TracView</fullName>
  <columns>Trac_Link__c</columns>
  <columns>Author_Text__c</columns>
  <columns>Changes__c</columns>
  <columns>Message__c</columns>
  <columns>CREATED_DATE</columns>
  <columns>Reviewed__c</columns>
  <filterScope>Everything</filterScope>
  <label>TracView</label>
 </listViews>
 <listViews>
  <fullName>all_unreviewed</fullName>
  <booleanFilter>1</booleanFilter>
  <columns>CREATED_DATE</columns>
  <columns>Project_Name__c</columns>
  <columns>Trac_Link__c</columns>
  <columns>Author_Text__c</columns>
  <columns>Message__c</columns>
  <columns>Reviewed__c</columns>
  <filterScope>Everything</filterScope>
  <filters>
   <field>Reviewed__c</field>
   <operation>equals</operation>
   <value>0</value>
  </filters>
  <label>All Unreviewed</label>
  <sharedTo>
   <allInternalUsers/>
  </sharedTo>
 </listViews>
 <nameField>
  <label>Revision Number</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Revisions</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>